bear:
Added a open file browser feature to allow changing files via the IAMStreamSelect interface.
Added selection capability of any active NetSource stream graphs via the IAMStreamSelect interface.
Changed the Demux video pin format to allow for different aspect ratios.
Implemented multicasting via a child filtergraph using the DSNet Receiver filter & the TSFileSink filter to create a timeshift file for playing.

Made some improvments to the Load() function so that the filtergraph will re-render an infinite tee filter when changing between media types. 

Removed the Threadexist test in the SetPositions() function to fix the problem where the position is set prior to the first run call. Re Remember the last media position in Zoomplayer fix.

Made some further improvments to the Load() file change feature to make it more robust and to allow for Infinite tee filter in the chain.
Fixed a number of bugs in the duration parser to allow for buggy streams such as those that have PRBS content. 

Made some further improvments to the Load() file change feature.
Some other minor improvements.

Fixed a problem with double starting after a file change.
Added a windows load feature to the Load Function, if you call it with a null filename it will now open a Browse window.
Improved the method of changing files, can now change files when paused and stopped. 
Fixed a problem with the property page updating while the pidparser was restarting.

Added a File Load feature to the ITSFileSource Interface as well as a button to the TSFileSource Property page. You can now change the file being played on the fly.
Added a auto reload feature for Timeshifting files where the TSFileSource fiiter will restart if the timeshift file changes size shuch as in a restart of the fileWriter filter.
Isolated the pidArray from the TSFileSourcePin class functions so it would reduce accessing conflicts.