@@ -1,4 +1,5 @@
 bear:
+Fixed a bug where the filter would stall if the NetSource graph failed due to no data flow.
 Added a open file browser feature to allow changing files via the IAMStreamSelect interface.
 Added selection capability of any active NetSource stream graphs via the IAMStreamSelect interface.
 Changed the Demux video pin format to allow for different aspect ratios.
